[gd_scene load_steps=2 format=3 uid="uid://j5ovdm6rehfn"]

[ext_resource type="Script" path="res://game/pause-menu/pause_menu.gd" id="1_wo1o4"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_wo1o4")

[node name="Controls" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -20.0
offset_right = 58.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Quit" type="Button" parent="Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Quit
"

[node name="Resume" type="Button" parent="Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Resume"

[connection signal="button_up" from="Controls/Quit" to="." method="_quit_mission"]
[connection signal="button_up" from="Controls/Resume" to="." method="_resume_mission"]
